fixed wrap bug in list setting

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -443,7 +443,13 @@ button.clear{
 		}
 		& + * {
 			margin: 0.5rem 0;
-		}
+        }
+        button:last-child{
+            transition: .25s;
+        }
+        &.open button:last-child{
+            transform: rotate(45deg);
+        }
 	}
 	button {
 		border: none;
@@ -472,7 +478,8 @@ button.clear{
 		}
 	}
 	.buttons {
-		width: fit-content;
+        width: fit-content;
+        display: flex;
 		*:last-child {
 			margin-right: 0;
 		}
